--- a/app/src/main/res/drawable/bg_commit_btn.xml
+++ b/app/src/main/res/drawable/bg_commit_btn.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@drawable/bg_commit_btn_high_light" android:state_focused="true"></item>
-    <item android:drawable="@drawable/bg_commit_btn_high_light" android:state_pressed="true"></item>
-    <item android:drawable="@drawable/bg_commit_btn_high_light" android:state_selected="true"></item>
-    <item android:drawable="@drawable/bg_commit_btn_normal"></item>
+    <item android:drawable="@drawable/bg_commit_btn_high_light" android:state_focused="true" />
+    <item android:drawable="@drawable/bg_commit_btn_high_light" android:state_pressed="true" />
+    <item android:drawable="@drawable/bg_commit_btn_high_light" android:state_selected="true" />
+    <item android:drawable="@drawable/bg_commit_btn_normal" />
 </selector>
